--- a/styles/style.css
+++ b/styles/style.css
@@ -25,6 +25,18 @@ main {
     display: none;
 }
 
+.btn {
+    width: 120px;
+    padding: 10px;
+    border: none;
+    border-radius: 6px;
+}
+
+#next-button {
+    width: 220px;
+    margin-bottom: 10px;
+    padding: 10px;
+}
 #options-container {
     display: flex;
     flex-direction: column;
@@ -45,4 +57,29 @@ main {
 
 .wrong {
     background-color: red;
+}
+
+#score-container {
+    width: 40vw;
+    height: 30vh;
+    border: 1px solid lightgrey;
+    text-align: center;
+
+}
+
+#score-container > h2 {
+    margin: 10px 0;
+}
+
+#score-container > p {
+    font-size: 22px;
+}
+
+#score-container > button {
+    width: 120px;
+    padding: 10px;
+    margin-top: 10px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
 }
